crates/pato/tests/fixtures/valid/commented.gram
// heading
(alice:Person)
(alice)-[:KNOWS]->(bob:Person) // edge comment
// footer
