crates/pato/tests/fixtures/invalid/P004.gram
(alice:Person)-[:knows]->(bob:Person)
